🎉 Styling updates and new media pages! 🎉 - **Updated CSS**: Changed the pseudo-element for external links from `::after` to `::before` for `books.css`, `links.css`, and `music.css`, turning move-along icons into fun emojis! 📚🔗🎵 - **Reflected styling changes**: This change improves readability and keeps spacing consistent, giving it a fresh new flair! 🤩 - **Created new Markdown files**: Added `_index.md` for books and music with descriptive content, differentiating between media types! 🎈 - **Updated links**: Fixed all URLs in links for better navigation to the new media structure. Bye-bye old paths! 🚫
The result? A lively, organized structure that presents content in a more visually appealing way! 💥

--- a/assets/css/links.css
+++ b/assets/css/links.css
@@ -64,8 +64,8 @@
     margin-right: 1em;
 }
 
-.link-posts a[target="_blank"]::after {
-    content: " ↪";
+.link-posts a[target="_blank"]::before {
+    content: "🔗";
     color: var(--color-secondary);
     text-decoration: none;
 }
